# meguru-prototype

./: .gitmodules  README.md
beacon-receiver/: README.md  main.py  pyproject.toml
beacon-receiver/static/css/: index.css
beacon-receiver/templates/: index.html
beacon-sender/: README.md
beacon-sender/bluez-5.9/: Makefile  Makefile.in  config.h  config.status  configure  libtool
beacon-sender/bluez-5.9/attrib/: gatttool
beacon-sender/bluez-5.9/attrib/.deps/: att.Po  bluetoothd-att.Po  bluetoothd-gatt-service.Po  bluetoothd-gatt.Po  bluetoothd-gattrib.Po  gatt.Po  gattrib.Po  gatttool.Po  (+2 more)
beacon-sender/bluez-5.9/client/: bluetoothctl
beacon-sender/bluez-5.9/lib/: bluez.pc  libbluetooth.la
beacon-sender/bluez-5.9/monitor/: btmon
beacon-sender/bluez-5.9/src/: bluetoothd
beacon-sender/bluez-5.9/tools/: bccmd  bluetooth-player  ciptool  hciattach  hciconfig  hcidump  hcitool  hid2hci  l2ping  l2test  l2test.c  obex-client-tool  obex-server-tool  rctest  rctest.c  rfcomm  sdptool
beacon-sender/bluez-5.9/unit/: test-crc  test-eir  test-gdbus-client  test-gobex  test-gobex-apparam  test-gobex-header  test-gobex-packet  test-gobex-transfer  test-lib  test-mgmt  test-sdp  test-textfile  test-uuid
beacon-sender/src/: emit_beacon_when_detecting_objects.py
image-recognition-train/: .gitignore  README.md  data.yaml  requirements.txt  run-detect.sh
image-recognition-train/src/: mk_yolo_format_labels.py  split_dataset.py
image-recognition-train/training_result_object_in_scene/: events.out.tfevents.1677402268.ryoiki22-01.1111107.0  opt.yaml  results.csv
(+221 files in other folders)
